# voronoi

./: CMakeLists.txt  Dockerfile  Makefile  README  archlinux.requirements  edge.py  loop.py  point.py  python.requirements  triangle.py  triangulation.py  voronoi.py
include/: arc.h  base.h  beachline.h  edge.h  equation.h  line.h  parabola.h  point.h  quadratic.h  vector2d.h  voronoi.h
src/: arc.cpp  beachline.cpp  edge.cpp  equation.cpp  line.cpp  main.cpp  parabola.cpp  point.cpp  python.cpp  quadratic.cpp  run_voronoi.py  vector2d.cpp  voronoi.cpp
